# Zia_2019

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  deploy_rsa.enc  index.html  profile.sh  push.sh  server
Sources/: Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Log.cpp  Log.hpp  Main.cpp  Server.cpp  Server.hpp
config/: config.json  server_config.json
doc/html/: _config_8cpp.html  _config_8cpp__incl.map  _config_8cpp__incl.md5  _config_8cpp_source.html  _config_8hpp.html  _config_8hpp__dep__incl.map  _config_8hpp__dep__incl.md5  _config_8hpp__incl.map  _config_8hpp__incl.md5  _config_8hpp_source.html  _config_manager_8cpp.html  _config_manager_8cpp__incl.map  _config_manager_8cpp__incl.md5  _config_manager_8cpp_source.html  _config_manager_8hpp.html  _config_manager_8hpp__dep__incl.map  _config_manager_8hpp__dep__incl.md5  _config_manager_8hpp__incl.map  _config_manager_8hpp__incl.md5  _config_manager_8hpp_source.html  _connection_8cpp.html  _connection_8cpp__incl.map  _connection_8cpp__incl.md5  _connection_8cpp_source.html  _connection_8hpp.html  _connection_8hpp__dep__incl.map  _connection_8hpp__incl.map  _connection_8hpp__incl.md5  _connection_8hpp_source.html  _connection_manager_8cpp.html  _connection_manager_8cpp__incl.map  _connection_manager_8cpp__incl.md5  _connection_manager_8cpp_source.html  _connection_manager_8hpp.html  _connection_manager_8hpp__dep__incl.map  _connection_manager_8hpp__dep__incl.md5  _connection_manager_8hpp__incl.map  _connection_manager_8hpp__incl.md5  _connection_manager_8hpp_source.html  _env_manager_8cpp.html  (+221 more)
doc/latex/: _config_8cpp.tex  _config_8cpp__incl.md5  _config_8hpp.tex  _config_8hpp__dep__incl.md5  _config_8hpp__incl.md5  _config_manager_8cpp.tex  _config_manager_8cpp__incl.md5  _config_manager_8hpp.tex  _config_manager_8hpp__dep__incl.md5  _config_manager_8hpp__incl.md5  _connection_8cpp.tex  _connection_8cpp__incl.md5  _connection_8hpp.tex  _connection_8hpp__dep__incl.md5  _connection_8hpp__incl.md5  _connection_manager_8cpp.tex  _connection_manager_8cpp__incl.md5  _connection_manager_8hpp.tex  _connection_manager_8hpp__dep__incl.md5  _connection_manager_8hpp__incl.md5  _env_manager_8cpp.tex  _env_manager_8cpp__incl.md5  _env_manager_8hpp.tex  _env_manager_8hpp__dep__incl.md5  _env_manager_8hpp__incl.md5  _fill_page_8cpp.tex  _fill_page_8cpp__incl.md5  _fill_page_8hpp.tex  _fill_page_8hpp__dep__incl.md5  _fill_page_8hpp__incl.md5  _json_loader_8cpp.tex  _json_loader_8cpp__incl.md5  _json_loader_8hpp.tex  _json_loader_8hpp__dep__incl.md5  _json_loader_8hpp__incl.md5  _log_8cpp.tex  _log_8cpp__incl.md5  _log_8hpp.tex  _log_8hpp__dep__incl.md5  _log_8hpp__incl.md5  (+103 more)
doc/rtf/: _connection_8hpp__dep__incl.md5  _env_manager_8cpp__incl.md5  _fill_page_8hpp__incl.md5  _json_loader_8cpp__incl.md5  _json_loader_8hpp__dep__incl.md5  _json_loader_8hpp__incl.md5  _log_8cpp__incl.md5  _log_8hpp__dep__incl.md5  _log_8hpp__incl.md5  _module_8hpp__dep__incl.md5  _p_h_p_module_8cpp__incl.md5  _p_h_p_module_8hpp__dep__incl.md5  _parser_module_8hpp__incl.md5  _s_s_l_module_8hpp__dep__incl.md5  _server_config_8cpp__incl.md5  _server_config_8hpp__incl.md5  class_fill__inherit__graph.md5  class_parser__inherit__graph.md5  class_s_s_l_module__inherit__graph.md5  class_zia_1_1_server_config__inherit__graph.md5  dir_04bb494e9a6dc0ff623f86f87619ed94.rtf  dir_075bb3ff235063c77951cd176d15a741.rtf  dir_0961b4da15e38d9f03abe3a79db3576d.rtf  dir_313caf1132e152dd9b58bea13a4052ca.rtf  dir_61118d4a60280ff916d2d85233492aee.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7e83d1792d529f4aa7126ac7e0b3b699.rtf  dir_7f1b245933060fd9f785289e602b2b37.rtf  dir_dd5387579e0ca0269955c6f0b8c070ca.rtf  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.rtf  refman.rtf
doc/xml/: _config_8cpp.xml  _config_8hpp.xml  _config_manager_8cpp.xml  _config_manager_8hpp.xml  _connection_8cpp.xml  _connection_8hpp.xml  _connection_manager_8cpp.xml  _connection_manager_8hpp.xml  _env_manager_8cpp.xml  _env_manager_8hpp.xml  _fill_page_8cpp.xml  _fill_page_8hpp.xml  _json_loader_8cpp.xml  _json_loader_8hpp.xml  _log_8cpp.xml  _log_8hpp.xml  _module_8cpp.xml  _module_8hpp.xml  _p_h_p_module_8cpp.xml  _p_h_p_module_8hpp.xml  _parser_module_8cpp.xml  _parser_module_8hpp.xml  _s_s_l_module_8cpp.xml  _s_s_l_module_8hpp.xml  _server_8cpp.xml  _server_8hpp.xml  _server_config_8cpp.xml  _server_config_8hpp.xml  _shared_memory_8cpp.xml  (+40 more)
server/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp  FileWatcher.cpp  FileWatcher.hpp  config.cmake
src/config/include/: Config.hpp  ConfigManager.hpp  FileWatcher.hpp
src/config/src/: Config.cpp  ConfigManager.cpp  FileWatcher.cpp
src/modules/SSL/: CMakeLists.txt  SSLModule.cmake  SSLModule.cpp  SSLModule.hpp  cert.pem  key.pem  socket.cpp  sslModule.cmake
src/modules/fillPage/: CMakeLists.txt  FillPage.cpp  FillPage.hpp  fillPageModule.cmake
src/modules/parser/: CMakeLists.txt  ParserModule.cmake  ParserModule.cpp  ParserModule.hpp  parserModule.cmake
src/modules/php_cgi/: CMakeLists.txt  main.cpp  php_module.cpp  php_module.hpp  test.php
src/server/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Hello.hpp  Log.hpp  Main.cpp  Module.cpp  Module.hpp  Server.cpp  Server.hpp  ServerConfig.cpp  ServerConfig.hpp  World.hpp  connection.cpp  connection.hpp  request_handler.cpp  server.cmake  server.cpp  server.hpp
src/server/http_boost/: main.cpp  server  server.hpp
src/server/http_boost/doc_root/: index.html
src/server/modules/: CMakeLists.txt  Hello.cpp  Hello.hpp  ParserModule.cpp  World.cpp  World.hpp
src/server/src/: boost.cpp
src/utils/: CMakeLists.txt  EnvManager.cpp  EnvManager.hpp  JsonLoader.cpp  JsonLoader.hpp  utils.cmake
src/utils/include/: SharedMemory.hpp
src/utils/src/: SharedMemory.cpp
test/: test.cmake  test_boolean.cpp
tests/: CMakeLists.txt
tests/srcs/: test.cpp
(+156 files in other folders)
